src/terraform/modules/services/configuration/etcd/templates/e3w-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e3w
  namespace: ${namespace}
  annotations:
    runterrascan.io/skip: "[{\"rule\": \"AC_K8S_0087\", \"comment\": \"Container requirement\"}]"
spec:
  selector:
    matchLabels:
      app: e3w
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: e3w
    spec:
      containers:
      - name: e3w
        image: soyking/e3w:latest
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /app/conf
        securityContext:
          runAsNonRoot: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
        - name: config
          configMap:
            name: e3w-config
