src/terraform/modules/services/configuration/etcd/templates/e3w-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e3w
  namespace: ${namespace}
spec:
  type: ClusterIP
  selector:
    app: e3w
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
